add layout section team

--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -201,6 +201,117 @@
                 </div>
             </div>
         </section>
+
+        <section class="team container">
+            <div class="team-container">
+                <h2 class="subtitle team-subtitle">
+                    Команда
+                </h2>
+                <div class="team-carousel-container">
+                    <div class="team-carousel-slide-bar">
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-1.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Михаил Смирнов
+                            </h3>
+                            <p class="team-carousel-role">
+                                Digital artist: создание муз. подложки для арт-дайвинга в галерее сестер Асламазян
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-2.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Гунина Анна
+                            </h3>
+                            <p class="team-carousel-role">
+                                Дизайн: айдентика лаборатории, разработка дизайна сайта-визитки
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-3.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Алексей Степанов
+                            </h3>
+                            <p class="team-carousel-role">
+                                Sound engineer: звуковые эффекты для картины “Отсутствующие основания”
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-4.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Артур Манукян
+                            </h3>
+                            <p class="team-carousel-role">
+                                Музыкант, звуко-режиссер: музыка к арт-дайвингу на выставке “Россия нулевых: случайных
+                                кадр”
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-5.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Роза Сайфулина
+                            </h3>
+                            <p class="team-carousel-role">
+                                Видеомонтаж “Наивных вопросов художнику”, оцифровка картин галереи Асламазян для
+                                арт-дайвинга;
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-6.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Дарья Володина
+                            </h3>
+                            <p class="team-carousel-role">
+                                Оператор и фотограф “Наивных вопросов художнику”
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-7.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Henry
+                            </h3>
+                            <p class="team-carousel-role">
+                                Озвучка на иностранных языках
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-8.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Lucile
+                            </h3>
+                            <p class="team-carousel-role">
+                                Озвучка на иностранных языках
+                            </p>
+                        </div>
+                        <div class="team-carousel-card">
+                            <img src="../static/img/team-photo-9.png" alt="photo of a team member" class="team-carousel-photo">
+                            <h3 class="team-carousel-name">
+                                Андрей Гунявин
+                            </h3>
+                            <p class="team-carousel-role">
+                                Куратор лаборатории
+                            </p>
+                        </div>
+                    </div>
+                    <button class="team-carousel-btn team-carousel-btn-left">
+                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="13" cy="13" r="13" fill="#198F76" />
+                            <path
+                                d="M7.69387 12.9737C7.69285 12.7984 7.72647 12.6245 7.79277 12.4622C7.85908 12.2998 7.95678 12.1522 8.08027 12.0277L13.41 6.69801C13.5342 6.57377 13.6817 6.47523 13.844 6.40799C14.0063 6.34076 14.1803 6.30615 14.356 6.30615C14.5317 6.30615 14.7056 6.34076 14.868 6.40799C15.0303 6.47523 15.1778 6.57377 15.302 6.69801C15.4262 6.82224 15.5248 6.96973 15.592 7.13204C15.6592 7.29436 15.6938 7.46833 15.6938 7.64403C15.6938 7.81972 15.6592 7.99369 15.592 8.15601C15.5248 8.31833 15.4262 8.46581 15.302 8.59004L10.8917 12.9737L15.1288 17.3707C15.2651 17.4933 15.3746 17.6426 15.4505 17.8095C15.5265 17.9763 15.5672 18.157 15.5701 18.3403C15.573 18.5236 15.538 18.7055 15.4674 18.8747C15.3968 19.0438 15.2921 19.1966 15.1597 19.3234C15.0274 19.4502 14.8703 19.5484 14.6983 19.6117C14.5263 19.6751 14.343 19.7023 14.1601 19.6916C13.9771 19.6809 13.7982 19.6325 13.6348 19.5496C13.4713 19.4666 13.3268 19.3508 13.2101 19.2094L8.06695 13.8798C7.83202 13.6361 7.69863 13.3121 7.69387 12.9737Z"
+                                fill="#E9E9E8" />
+                        </svg>
+                    </button>
+                    <button class="team-carousel-btn team-carousel-btn-right">
+                        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="13" cy="13" r="13" fill="#198F76" />
+                            <path
+                                d="M17.6938 13.0263C17.6948 13.2016 17.6612 13.3755 17.5949 13.5378C17.5286 13.7002 17.4309 13.8478 17.3074 13.9723L11.9777 19.302C11.8535 19.4262 11.706 19.5248 11.5437 19.592C11.3814 19.6592 11.2074 19.6938 11.0317 19.6938C10.856 19.6938 10.6821 19.6592 10.5197 19.592C10.3574 19.5248 10.2099 19.4262 10.0857 19.302C9.96147 19.1778 9.86292 19.0303 9.79569 18.868C9.72845 18.7056 9.69385 18.5317 9.69385 18.356C9.69385 18.1803 9.72845 18.0063 9.79569 17.844C9.86292 17.6817 9.96147 17.5342 10.0857 17.41L14.496 13.0263L10.2589 8.6293C10.1226 8.50673 10.0131 8.35735 9.93716 8.19052C9.86123 8.02368 9.82054 7.84297 9.81764 7.65969C9.81473 7.47641 9.84967 7.29451 9.92028 7.12535C9.99089 6.95619 10.0956 6.80342 10.228 6.67659C10.3603 6.54977 10.5174 6.45161 10.6894 6.38826C10.8614 6.32491 11.0447 6.29774 11.2276 6.30843C11.4106 6.31913 11.5894 6.36747 11.7529 6.45043C11.9164 6.53338 12.0609 6.64917 12.1776 6.79056L17.3207 12.1202C17.5557 12.3639 17.6891 12.6879 17.6938 13.0263Z"
+                                fill="#E9E9E8" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
