--- a/Points_of_view/points/static/style/index.css
+++ b/Points_of_view/points/static/style/index.css
@@ -295,3 +295,79 @@ body {
     line-height: 23px;
     color: var(--grey);
 }
+
+.team-container {
+    padding-top: 66px;
+    padding-bottom: 80px;
+}
+
+.team-subtitle {
+    color: var(--pink);
+    padding-left: 55px;
+    margin-bottom: 60px;
+}
+
+.team-carousel-container {
+    overflow: hidden;
+    position: relative;
+}
+
+.team-carousel-slide-bar {
+    display: flex;
+    gap: 50px;
+    position: relative;
+    transform: translateX(-242px);
+    z-index: 5;
+}
+
+.team-carousel-card {
+    padding: 51px 61px 51px 51px;
+    background-color: var(--pink);
+    border-radius: 30px;
+    display: grid;
+    grid-template-areas:
+        "photo . name"
+        "photo . role";
+    grid-template-columns: 188px 44px 254px;
+    grid-template-rows: 69px 119px;
+}
+
+.team-carousel-photo {
+    grid-area: photo;
+}
+
+.team-carousel-name {
+    grid-area: name;
+    padding-top: 26px;
+    color: var(--grey);
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 25px;
+    text-transform: uppercase;
+}
+
+.team-carousel-role {
+    grid-area: role;
+    color: var(--grey);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 23px;
+}
+
+.team-carousel-btn {
+    position: absolute;
+    z-index: 3;
+    height: 26px;
+    width: 26px;
+    border-radius: 50%;
+}
+
+.team-carousel-btn-left {
+    top: 130px;
+    left: 362px;
+}
+
+.team-carousel-btn-right {
+    top: 130px;
+    left: 1010px;
+}
