--- a/Points_of_view/points/static/style/index.css
+++ b/Points_of_view/points/static/style/index.css
@@ -34,6 +34,7 @@ h4 {
 button {
     border: none;
     font-family: inherit;
+    cursor: pointer;
 }
 
 body {
@@ -93,24 +94,20 @@ body {
     line-height: 23px;
 }
 
-.header-contacts {
+.contacts {
     display: flex;
     gap: 18px;
 }
 
-.header-contacts-item {
-    background-color: var(--green);
+.contacts-item {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .hero {
     padding: 48px 55px 70px;
-    background-image: url('../img/hero-decorative-elements.svg');
+    background-image: url('../img/hero-index.svg');
     background-position: right 55px bottom 70px;
     background-repeat: no-repeat;
 }
@@ -150,6 +147,10 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+}
+
+.about-lab {
+    padding-bottom: 28px;
 }
 
 .about-lab-container {
@@ -230,8 +231,7 @@ body {
 }
 
 .projects {
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 131px;
 }
 
 .projects-container {
@@ -296,9 +296,15 @@ body {
     color: var(--grey);
 }
 
+.project-card-link {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+}
+
 .team-container {
-    padding-top: 66px;
-    padding-bottom: 80px;
+    padding-top: 73px;
+    padding-bottom: 130px;
 }
 
 .team-subtitle {
@@ -316,8 +322,8 @@ body {
     display: flex;
     gap: 50px;
     position: relative;
-    transform: translateX(-242px);
-    z-index: 5;
+     /* transform: translateX(-242px); */
+     transition: transform 0.5s ease-in-out;
 }
 
 .team-carousel-card {
@@ -356,7 +362,6 @@ body {
 
 .team-carousel-btn {
     position: absolute;
-    z-index: 3;
     height: 26px;
     width: 26px;
     border-radius: 50%;
@@ -370,4 +375,60 @@ body {
 .team-carousel-btn-right {
     top: 130px;
     left: 1010px;
+}
+
+.footer {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.footer-container {
+    display: flex;
+    border-radius: 30px;
+    background-image: url('../img/footer.svg');
+    background-repeat: no-repeat;
+    padding: 86px 127px 89px 55px;
+}
+
+.footer-nav {
+    margin-left: auto;
+    margin-right: 196px;
+    padding-top: 5px;
+}
+
+.footer-nav-item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23px;
+    color: var(--black)
+}
+
+.footer-nav-item:not(:last-child) {
+    margin-bottom: 21px;
+}
+
+.footer-contacts-subtitle {
+    margin-bottom: 20px;
+    padding-top: 4px;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 25px;
+    text-align: left;
+    color: var(--black);
+    text-transform: uppercase;
+}
+
+.footer-contacts-item {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23px;
+    color: var(--black);
+}
+
+.footer-contacts-item:not(:last-child) {
+    margin-bottom: 21px;
+}
+
+.footer-contacts {
+    padding-top: 13px;
 }
