--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -88,7 +88,7 @@
                     Арт-картель
                 </h1>
                 <p class="hero-text">
-                    Hey, teacher, leave these kids alone
+                    Hey, teacher, leave these kids alone<br>
                     All in all, it's just another brick in the wall<br>
                     Pink Floyd
                 </p>
@@ -101,7 +101,84 @@
             </div>
         </section>
 
-        
+        <section class="about-project container">
+            <div class="about-project-container">
+                <h2 class="about-project-subtitle">
+                    о проекте
+                </h2>
+                <div class="about-project-wrap">
+                    <img src="../static/img/art-cartel.png" alt="photo of the art cartel meeting">
+                    <div class="about-project-inner-wrap">
+                        <p class="about-project-descr-big">
+                            Арт-картель это форма совместного изучения интересующего.<br>Без учителя и господствующей
+                            <br>точки
+                            зрения, Единственно <br>правильной.
+                        </p>
+                        <p class="about-project-descr-small">
+                            В формате малой группы 8-10 человек мы самостоятельно изучаем материал и обсуждаем его на
+                            онлайн встречах.
+                        </p>
+                        <p class="about-project-descr-small">
+                            Мы вместе ищем информацию и много общаемся. Мы обнаруживаем совершенно разные точки зрения и
+                            подходы к пониманию. Мы дискутируем, иногда спорим, развивая новые ассоциативные связи,
+                            овладевая понятийным аппаратом и критическим мышлением.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-project-2">
+            <div class="container about-project-2-container">
+                <h2 class="about-project-2-subtitle">
+                    Ключевой манифест арт-картеля: главенство разных точек зрения
+                </h2>
+                <div class="about-project-2-wrap">
+                    <div class="about-project-2-card">
+                        Арт картель это форма совместной работы над самообразование.<br>В малых группах по 8-10 человек
+                        “картелианцы” в формате дискуссий и бесед выстраивает программу интересующих тем.
+                    </div>
+                    <div class="about-project-2-card">
+                        Участие в картеле подразумевает объемную работу по подготовке компактных докладов
+                        и их изложения, подготовке собственной речи. <br>Таким образом, удается защитить дискуссии от
+                        реактивных и аффективных высказываний.
+                    </div>
+                    <div class="about-project-2-card">
+                        В картеле главенствуют горизонтальные связи и отсутствует позиция сверху, того, кто знает лучше.
+                        Своя собственная точка зрения формируется в процессе освоения разного, зачастую противоположного
+                        и спорного.
+                    </div>
+                    <div class="about-project-2-card">
+                        Работу картеля структурирует ведущий, планирующий равномерный порядок речей, выполняющий
+                        организовывающую и секретарские функции.
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="realization">
+            <div class="container realization-container">
+                <h2 class="realization-subtitle">
+                    реализация
+                </h2>
+                <div class="realization-wrap">
+                    <p class="realization-text">
+                        В процессе подготовки 3 картеля на следующие темы:
+                    </p>
+                    <ul class="realization-list">
+                        <li class="realization-item">
+                            как понять современное искусство: исследование культурно-исторического контекста его зарождения
+                        </li>
+                        <li class="realization-item">
+                            как слушать музыку?
+                        </li>
+                        <li class="realization-item">
+                            английский для творческих профессий: дизайнеров, художников, кураторов
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
