--- a/Points_of_view/points/templates/art-diving.html
+++ b/Points_of_view/points/templates/art-diving.html
@@ -107,25 +107,178 @@
                             зритель подходит к картине
                         </div>
                         <div class="about-project-left-arrow">
-                            
+                            <svg width="24" height="68" viewBox="0 0 24 68" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect x="7" width="10" height="50" fill="#C495C4" />
+                                <path d="M12 68L0.741669 50H23.2583L12 68Z" fill="#C495C4" />
+                            </svg>
                         </div>
                         <div class="about-project-left-card">
                             наводит свой смартфон на QR код рядом с картиной
                         </div>
                         <div class="about-project-left-arrow">
-                            
+                            <svg width="24" height="68" viewBox="0 0 24 68" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <rect x="7" width="10" height="50" fill="#C495C4" />
+                                <path d="M12 68L0.741669 50H23.2583L12 68Z" fill="#C495C4" />
+                            </svg>
                         </div>
                         <div class="about-project-left-card">
                             надевает наушники и запускает сеанс медиации
                         </div>
                     </div>
                     <div class="about-project-right">
-
+                        <h3 class="about-project-right-subtitle">
+                            Арт-дайвинг это аудио-сеансы погружения в картину в стенах галереи.
+                        </h3>
+                        <p class="about-project-right-descr">
+                            Музыка проступает в качестве камертона настраивая зрителя на неспешное созерцание.<br>
+                            Голос обращает его внимание на детали произведения.
+                        </p>
+                        <p class="about-project-right-descr">
+                            В ходе арт-медиации преображается восприятие произведения.Смещаясь от беглых оценок
+                            “красиво/некрасиво”, “нравится/не нравится” к вопросам “что я чувствую и о чём я думаю
+                            созерцая произведение”?
+                        </p>
+                        <p class="about-project-right-descr">
+                            По окончанию сеанса зрителю предлагается поделиться возникшим художественным впечатление с
+                            помощью интегрированного сервиса отправки текстовых или голосовых сообщений.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
 
+        <section class="about-project-2">
+            <div class="container about-project-2-container">
+                <h3 class="about-project-2-subtitle">
+                    Арт-дайвинг - это сеанс погружения и эмоционального сближения с объектом искусства.
+                </h3>
+                <div class="about-project-2-inner-container">
+                    <div class="about-project-2-left">
+                        <p class="about-project-2-left-text">
+                            Не секрет, что организация галерейно-выставочного пространства не всегда способна обеспечить
+                            самое главное: возможность уединиться с произведением.
+                        </p>
+                        <p class="about-project-2-left-text">
+                            С другой стороны и зритель скромен. Задерживать внимание напротив картины даже на 10 минут
+                            до сих пор не является привычным и распространенным способом посещения выставок.
+                        </p>
+                        <p class="about-project-2-left-text">
+                            Однако сближение с произведением искусства требует времени. Подобно тому как написание
+                            картины длительный процесс в ходе которого количество наносимых слоев превышает порой сотню,
+                            пока не будет достигнут удовлетворяющий художника результат. Логично предположить, что и
+                            процесс восприятия мог бы устремляться к временной равнозначности процессу создания.
+                        </p>
+                    </div>
+                    <div class="about-project-2-right">
+                        <p class="about-project-2-right-text">
+                            настраивает на неспешное созерцание произведения
+                        </p>
+                        <p class="about-project-2-right-text">
+                            провоцирует в зрителе вопрошание и его собственном художественном впечатление
+                        </p>
+                        <p class="about-project-2-right-text">
+                            возбуждает чувства и мыслительный ассоциативный ряд
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills">
+            <div class="container skills-container">
+                <h2 class="subtitle skills-subtitle">
+                    что мы умеем?
+                </h2>
+                <ul class="skills-list">
+                    <li class="skills-item skills-item-1">
+                        <h3 class="skills-list-subtitle">
+                            1. Провести арт-медиацию
+                        </h3>
+                        <p class="skills-list-descr">
+                            В ходе медиации делаем из каждого зрителя высокочувствительный “сенсор”, отражающий
+                            художественное впечатление от произведения
+                        </p>
+                    </li>
+                    <li class="skills-item skills-item-2">
+                        <h3 class="skills-list-subtitle">
+                            2. Дополнить аудиально
+                        </h3>
+                        <p class="skills-list-descr">
+                            Можем написать музыкальное или звуковое сопровождение
+                        </p>
+                    </li>
+                    <li class="skills-item skills-item-3">
+                        <h3 class="skills-list-subtitle">
+                            3. Перевести
+                        </h3>
+                        <p class="skills-list-descr">
+                            Можем сопроводить актёрский переводом на 3-х языках (русский, английский, французский)
+                        </p>
+                    </li>
+                    <li class="skills-item skills-item-4">
+                        <h3 class="skills-list-subtitle">
+                            4. Преподнести
+                        </h3>
+                        <p class="skills-list-descr">
+                            Преподнести ментально, эмоционально, материально (произведение искусство может быть объектом
+                            вложений)
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="realization">
+            <div class="container realization-container">
+                <h2 class="subtitle realization-subtitle">
+                    реализация
+                </h2>
+                <div class="realization-wrap">
+                    <div class="realization-card">
+                        <h3 class="relization-name">
+                            Cестры Асламазян
+                        </h3>
+                        <p class="realization-role">
+                            галереи сестер Асламазян
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <h3 class="relization-name">
+                            Дмитрий Несмелов
+                        </h3>
+                        <p class="realization-role">
+                            выставки документального фотографа «Россия нулевых: случайный кадр»
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <h3 class="relization-name">
+                            Братья Jevo
+                        </h3>
+                        <p class="realization-role">
+                            скульптуры «Елена»
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <h3 class="relization-name">
+                            Артем Саргисян
+                        </h3>
+                        <p class="realization-role">
+                            картины «100 лет воспоминаний»
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <h3 class="relization-name">
+                            Shirin Heidarinezhad
+                        </h3>
+                        <p class="realization-role">
+                            полотна иранской художницы «Отсутствующие основания»
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
