--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -240,7 +240,7 @@
                 </h2>
                 <div class="team-carousel-container">
                     <div class="team-carousel-slide-bar">
-
+                        <!-- тут слайдер -->
                     </div>
                     <button class="team-carousel-btn team-carousel-btn-left">
                         <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
