--- a/Points_of_view/points/templates/naive-questions.html
+++ b/Points_of_view/points/templates/naive-questions.html
@@ -102,7 +102,7 @@
                     о проекте
                 </h2>
                 <div class="about-project-wrap">
-                    <img src="/img/naive-question-about.png" alt="video interview with the artist">
+                    <img src="../static/img/naive-question-about.png" alt="video interview with the artist">
                     <div class="about-project-inner-wrapper">
                         <p class="about-project-descr-big">
                             Наивные вопросы художнику - это видеоинтервью, на которых художник раскрывается
@@ -179,6 +179,35 @@
                 <h2 class="subtitle realization-subtitle">
                     реализация
                 </h2>
+                <div class="realization-wrap">
+                    <div class="realization-card">
+                        <img src="../static/img/Ayumi-Adachi.png" alt="photo of Ayumi Adachi">
+                        <h3 class="relization-name">
+                            Ayumi Adachi
+                        </h3>
+                        <p class="realization-role">
+                            японская художница
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <img src="../static/img/Hayk-Adamyan.png" alt="photo of Hayk Adamyan">
+                        <h3 class="relization-name">
+                            Айк Адамян
+                        </h3>
+                        <p class="realization-role">
+                            фотограф
+                        </p>
+                    </div>
+                    <div class="realization-card">
+                        <img src="../static/img/Alexey-Manukyan.png" alt="photo of Alexey Manukyan">
+                        <h3 class="relization-name">
+                            Алексей Манукян
+                        </h3>
+                        <p class="realization-role">
+                            художник
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
