--- a/Points_of_view/points/static/style/contacts.css
+++ b/Points_of_view/points/static/style/contacts.css
@@ -83,6 +83,16 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+    color: var(--black);
+    transition: color 0.3s ease-in-out;
+}
+
+.header-nav-link:hover {
+    color: #01A582;
+}
+
+.header-nav-link:active {
+    color: #136856;
 }
 
 .contacts {
@@ -94,6 +104,19 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+
+.contacts-item circle {
+    fill: var(--green);
+    transition: fill 0.3s ease-in-out;
+}
+
+.contacts-item:hover circle {
+    fill: #01A582;
+}
+
+.contacts-item:active circle {
+    fill: #136856;
 }
 
 .contact-page {
