--- a/Points_of_view/points/static/style/index.css
+++ b/Points_of_view/points/static/style/index.css
@@ -92,6 +92,16 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+    color: var(--black);
+    transition: color 0.3s ease-in-out;
+}
+
+.header-nav-link:hover {
+    color: #01A582;
+}
+
+.header-nav-link:active {
+    color: #136856;
 }
 
 .contacts {
@@ -103,6 +113,19 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+
+.contacts-item circle {
+    fill: var(--green);
+    transition: fill 0.3s ease-in-out;
+}
+
+.contacts-item:hover circle {
+    fill: #01A582;
+}
+
+.contacts-item:active circle {
+    fill: #136856;
 }
 
 .hero {
@@ -147,6 +170,15 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 23px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.hero-btn:hover {
+    background-color: #01A582;
+}
+
+.hero-btn:active {
+    background-color: #136856;
 }
 
 .about-lab {
@@ -301,6 +333,19 @@ body {
     right: 30px;
 }
 
+.project-card-link circle {
+    fill: var(--green);
+    transition: fill 0.3s ease-in-out;
+}
+
+.project-card-link:hover circle {
+    fill: #01A582;
+}
+
+.project-card-link:active circle {
+    fill: #136856;
+}
+
 .team-container {
     padding-top: 73px;
     padding-bottom: 130px;
@@ -321,8 +366,8 @@ body {
     display: flex;
     gap: 50px;
     position: relative;
-     /* transform: translateX(-242px); */
-     transition: transform 0.5s ease-in-out;
+    /* transform: translateX(-242px); */
+    transition: transform 0.5s ease-in-out;
 }
 
 .team-carousel-card {
@@ -366,6 +411,19 @@ body {
     border-radius: 50%;
 }
 
+.team-carousel-btn circle {
+    fill: var(--green);
+    transition: fill 0.3s ease-in-out;
+}
+
+.team-carousel-btn:hover circle {
+    fill: #01A582;
+}
+
+.team-carousel-btn:active circle {
+    fill: #136856;
+}
+
 .team-carousel-btn-left {
     top: 130px;
     left: 362px;
@@ -395,11 +453,20 @@ body {
     padding-top: 5px;
 }
 
-.footer-nav-item {
+.footer-nav-link {
     font-size: 18px;
     font-weight: 400;
     line-height: 23px;
-    color: var(--black)
+    color: var(--black);
+    transition: color 0.3s ease-in-out;
+}
+
+.footer-nav-link:hover {
+    color: #01A582;
+}
+
+.footer-nav-link:active {
+    color: #136856;
 }
 
 .footer-nav-item:not(:last-child) {
