--- a/Points_of_view/points/static/style/index.css
+++ b/Points_of_view/points/static/style/index.css
@@ -97,7 +97,7 @@ body {
 }
 
 .header-nav-link:hover {
-    color: #01A582;
+    color: #136856;
 }
 
 .header-nav-link:active {
@@ -462,7 +462,7 @@ body {
 }
 
 .footer-nav-link:hover {
-    color: #01A582;
+    color: #136856;
 }
 
 .footer-nav-link:active {
